syntax = "proto3";
package octavePackage;

service Octave {
  rpc octave(InputOctave) returns (OutputOctave);
}

message InputOctave {
  string idStudy = 1;
  string idPatient = 2;
  repeated Series series = 3;
}

message Series {
  string identifierStudyCatalog = 1;
  repeated Test tests = 2;
}

message Test {
  string nameSerie = 1;
  Columns data = 2;
}

message Columns {
  repeated string time = 1;
  repeated string gazex = 2;
  repeated string gazey = 3;
  repeated string stimulux = 4;
  repeated string stimuluy = 5;
  repeated string gazevelX = 6;
  repeated string gazevely = 7;
  repeated string errorx = 8;
  repeated string errory = 9;
  repeated string pupilArea = 10;
  repeated string gazeRawx = 11;
  repeated string gazeRawy = 12;
  repeated string blinks = 13;
  repeated string valid = 14;
}

message OutputOctave {
  string idStudy = 1;
  repeated Result results = 2;
  global globalResult = 3;
}

message Result {
  string result = 1;
  string idResultType =2;
}
message global {
  string globalResultNames =1;
  string globalResults = 2;
}